# KEditor

./: meson.build
include/: config.hh  exceptions.hh  log.hh  logger.hh  utils.hh
include/editor/: content.hh  editor.hh  workspace.hh
include/editor/workspace/: buffer.hh
include/model/: piece_table.hh
include/platform/: mapped_file.hh
include/sdl/: color.hh  context.hh  cursor.hh  event.hh  font.hh  instance.hh  rect.hh  renderer.hh  resource.hh  signal.hh  text.hh  texture.hh  window.hh
include/widgets/: base.hh  box.hh  button.hh  clickable.hh  frame.hh  hoverable.hh  icon.hh  label.hh  widget.hh
keditor/: config.json
src/: config.cc  log.cc  logger.cc  main.cc  meson.build  utils.cc
src/editor/: content.cc  editor.cc  meson.build
src/editor/workspace/: buffer.cc
src/model/: meson.build  piece_table.cc
src/platform/: l_mapped_file.cc  meson.build  w_mapped_file.cc
src/sdl/: context.cc  cursor.cc  event.cc  font.cc  instance.cc  meson.build  renderer.cc  signal.cc  text.cc  window.cc
src/widgets/: base.cc  box.cc  button.cc  clickable.cc  frame.cc  hoverable.cc  icon.cc  label.cc  meson.build
